--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
             <link rel="stylesheet" href="main.css">
     
             <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Qwitcher+Grypen&display=swap" rel="stylesheet">
-    
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Qwitcher+Grypen&display=swap" rel="stylesheet">
         </head>
 
         <body>
@@ -54,9 +53,38 @@
         <button><img class="cart" src="https://i.pinimg.com/originals/15/bb/55/15bb559cdd28f56d7c17b00498b4a946.png"></button>
         <a href="https://www.xbox.com/es-MX" target="_blank"><h3>Xbox series X</h3></a>
     </div>
+    <br><br><br>
+    <hr><hr><hr>
+    <input type="date">
+    <br><hr>
+   <input type="checkbox" name="" id="">
+   <br><hr>
+   <input type="button" value="hola">
+   <input type="datetime-local" name="" id="">
+   <input type="email" name="" id="" required>
+    <input type="file" name="" id="">
+    <br>
+    <input type="image" alt="">
+    <br>
+    <input type="month" name="" id="">
+    <br>
+    <input type="password" name="password" id="">
+    <br>
+    <input type="radio">
+    <br>
+    <input type="search" name="" id="">
+    <br>
+    <input type="url">
+    <br> 
+    <input type="week" name="" id="">
+    <br>
+    <input type="time">
+    <br>
+    <input type="reset">
 
+    <br><br><br><hr>
+<a href="tienda.html"><h2>TIENDA ONLINE</h2></a>
 </div>
-
         </body>
 
 
